--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ la celebrarea iubirii noastre.
 5 septembrie 2026<br>
 Ora 20:00
 Nu uitați să fiți prezenți la momentul nostru special: dansul mirilor, care va avea loc la ora 21:30.
-Prezența voastră va face ca acest moment să fie cu adevărat magic și de neuitat pentru noi.    
+Prezența voastră va face ca acest moment să fie cu adevărat magic și de neuitat pentru noi ❤️
 </div>
 </div>
 
